--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "axois": "^0.0.1-security"
+    "axois": "^0.0.1-security",
+    "sweetalert2": "^11.10.6"
   },
   "description": ""
 }
